# cryptanalysis

./: .gitignore  .gitlab-ci.yml  Earthfile  Makefile  README.md
.github/workflows/: continuous-integration.yml  rust-continuous-integration.yml
.gitlab/ci/: monoalphabetic-substitution-encipher.yml  monoalphabetic-substitution-frequency-analysis.yml
monoalphabetic-substitution-cipher/: README.md
monoalphabetic-substitution-cipher/encipher/: Cargo.toml  Earthfile  Makefile  README.md
monoalphabetic-substitution-cipher/encipher/ci/: check-rust-formatting.Dockerfile  check-rust-linting.Dockerfile  compile.Dockerfile  fix-rust-formatting.Dockerfile  unit-test.Dockerfile
monoalphabetic-substitution-cipher/encipher/src/: lib.rs  main.rs  tests.rs
monoalphabetic-substitution-cipher/examples/: The-Adventures-of-Sherlock-Holmes.key  The-Adventures-of-Sherlock-Holmes.plaintext  temp.txt
monoalphabetic-substitution-cipher/frequency-analysis/: Cargo.toml  Earthfile  Makefile  README.md
monoalphabetic-substitution-cipher/frequency-analysis/ci/: check-rust-formatting.Dockerfile  compile.Dockerfile  fix-rust-formatting.Dockerfile  unit-test.Dockerfile
monoalphabetic-substitution-cipher/frequency-analysis/examples/: The-Adventures-of-Sherlock-Holmes.ciphertext  The-Adventures-of-Sherlock-Holmes.frequency-analysis
monoalphabetic-substitution-cipher/frequency-analysis/src/: main.rs  tests.rs
monoalphabetic-substitution-cipher/frequency-analysis/src/dictionary/: mod.rs  tests.rs
monoalphabetic-substitution-cipher/frequency-analysis/src/dictionary/dictionary_helper/: mod.rs  tests.rs
monoalphabetic-substitution-cipher/frequency-analysis/src/dictionary/helper/: mod.rs  tests.rs
monoalphabetic-substitution-cipher/frequency-analysis/src/dictionary/one_letter_words/: mod.rs  tests.rs
monoalphabetic-substitution-cipher/frequency-analysis/src/frequency_analysis/: mod.rs  tests.rs
monoalphabetic-substitution-cipher/frequency-analysis/src/helper/: mod.rs  tests.rs
monoalphabetic-substitution-cipher/monoalphabetic-substitution-cipher/: Cargo.toml  README.md
monoalphabetic-substitution-cipher/monoalphabetic-substitution-cipher/src/: main.rs  tests.rs
monoalphabetic-substitution-ciphers/: Cargo.toml
monoalphabetic-substitution-ciphers/examples/: The-Adventures-of-Sherlock-Holmes.ciphertext  The-Adventures-of-Sherlock-Holmes.plaintext
monoalphabetic-substitution-ciphers/frequency-analysis/: Cargo.toml
monoalphabetic-substitution-ciphers/frequency-analysis/src/: main.rs
monoalphabetic-substitution-ciphers/key-inversion/: Cargo.toml
monoalphabetic-substitution-ciphers/key-inversion/src/: main.rs
monoalphabetic-substitution-ciphers/substitution/: Cargo.toml
monoalphabetic-substitution-ciphers/substitution/src/: main.rs
