[package]
name = "monoalphabetic_substitution_cipher_encipher"
version = "0.1.2"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"

[dev-dependencies]
rstest = "0.6.2"
