[package]
name = "monoalphabetic_substitution_cipher_frequency_analysis"
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.7"
regex = "1.3.3"
log = "0.4.8"
pretty_env_logger = "0.3.1"

[dev-dependencies]
rstest = "0.5.2"
