[package]
name = "monoalphabetic_substitution_cipher_frequency_analysis"
version = "0.1.2"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2021"


[dependencies]
# For CLI parsing.
clap = { version = "4.4.6", features = ["derive"] }

# For defining constants.
lazy_static = "1.4.0"

# For logging.
log = "0.4.20"
pretty_env_logger = "0.4.0"

# For handling whitespace in text.
regex = "1.9.5"


[dev-dependencies]
# For parameterized testing.
rstest = "=0.12.0"


[profile.release]
lto = 'fat'
codegen-units = 1
