[package]
name = "monoalphabetic-substitution-cipher"
version = "0.1.0"
authors = ["C <DeveloperC@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2" 

[dev-dependencies]
rstest = "0.4.0"
